# AgentForge

./: .gitignore  README.md  pyproject.toml
agentforge/: __init__.py  agent.py
agentforge/models/: __init__.py  plan.py  response.py  tool.py
agentforge/patterns/: __init__.py  history.py  hitl.py  intent.py  peos.py  sanitizer.py  templates.py  tool_binding.py  truncation.py
agentforge/utils/: __init__.py  metrics.py  tokens.py
assets/: demo_script.py
benchmarks/: run_benchmark.py
docs/: architecture.md  benchmarks.md
examples/: maintenance_agent.py  simple_agent.py
tests/: __init__.py  test_history_truncation.py  test_hitl.py  test_intent_cascade.py  test_models.py  test_sanitizer.py  test_tool_binding.py
