[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "0.4.0"
description = "Production patterns for LLM agents — PEOS orchestration, dynamic tool binding, error sanitization, and token optimization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Naveen Kumar Baskaran"},
]
keywords = ["llm", "agent", "langchain", "langgraph", "peos", "tool-binding", "token-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.30",
    "langchain-core>=0.2",
    "langgraph>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["agentforge[llm,dev]"]

[project.urls]
Homepage = "https://github.com/naveenkumarbaskaran/AgentForge"
Documentation = "https://github.com/naveenkumarbaskaran/AgentForge/blob/main/docs/architecture.md"
Issues = "https://github.com/naveenkumarbaskaran/AgentForge/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
